# Network-Switcher

./: .hgignore  .hgtags  AUTHORS  Makefile.am  README.md  configure.ac  docker-build.sh
.github/workflows/: build.yml
src/: main.cpp  notify.cpp  notify.hpp  wut_extras.cpp  wut_extras.hpp
